# Visual-Navigation-for-Drones

drone-visual-navigation/backend/: pyproject.toml  requirements.txt
drone-visual-navigation/backend/app/: __init__.py  main.py
drone-visual-navigation/backend/app/api/: flights.py
drone-visual-navigation/backend/app/features/: __init__.py
drone-visual-navigation/backend/app/geo/: __init__.py  csv_exporter.py  kml_exporter.py
drone-visual-navigation/backend/app/geometry/: __init__.py  local_coordinates.py
drone-visual-navigation/backend/app/preprocessing/: __init__.py  dat_inspector.py  frame_sampler.py  reference_builder.py  reference_schema.py
drone-visual-navigation/backend/app/storage/: __init__.py  flight_storage.py
drone-visual-navigation/backend/app/telemetry/: __init__.py  srt_parser.py
drone-visual-navigation/backend/app/tests/: test_dat_inspector.py  test_frame_sampler.py  test_kml_exporter.py  test_local_coordinates.py  test_orb_features.py  test_reference_schema.py  test_srt_parser.py
drone-visual-navigation/backend/app/video/: __init__.py  video_metadata.py  video_streaming.py
drone-visual-navigation/backend/src/drone_nav/: __init__.py
drone-visual-navigation/backend/src/drone_nav/features/: __init__.py  orb_features.py
drone-visual-navigation/backend/src/drone_nav/geometry/: __init__.py  local_coordinates.py
drone-visual-navigation/backend/src/drone_nav/landmarks/: __init__.py
drone-visual-navigation/backend/src/drone_nav/matching/: __init__.py  orb_matcher.py
drone-visual-navigation/backend/src/drone_nav/navigation/: __init__.py  (+5 more)
(+430 files in other folders)
