[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "drone-nav-backend"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = []

[tool.setuptools.packages.find]
where = [".", "src"]

[tool.pytest.ini_options]
pythonpath = [".", "src"]
testpaths = ["app/tests"]
